Remote config fixes (#170)
* Remote config fixes

Add / if not in in remote config base url
Catch other errors than HttpErrors

* [Mega-Linter] Apply linters fixes

* fix rakudo install

* Fix phpstan install

* Fix php & raku installs

* try again

* New attempt

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/flavors/php/Dockerfile
+++ b/flavors/php/Dockerfile
@@ -70,6 +70,7 @@ RUN apk add --update --no-cache \
                 php7-curl \
                 php7-dom \
                 php7-simplexml \
+                composer \
                 ansible-lint \
                 libc-dev \
                 libxml2-dev \
@@ -184,8 +185,10 @@ RUN phive --no-progress install phpcs -g --trust-gpg-keys 31C7E470E2138192
 
 
 # phpstan installation
-RUN phive --no-progress install phpstan -g --trust-gpg-keys CF1A108D0E7AE720
+RUN composer global require phpstan/phpstan \
+    && composer global config bin-dir --absolute
 
+ENV PATH="/root/.composer/vendor/bin:$PATH"
 
 # psalm installation
 RUN phive --no-progress install psalm -g --trust-gpg-keys 8A03EA3B385DBAA1
