--- a/megalinter/descriptors/php.yml
+++ b/megalinter/descriptors/php.yml
@@ -16,6 +16,7 @@ install:
     - php7-curl
     - php7-dom
     - php7-simplexml
+    - composer
   dockerfile:
     - |
       RUN wget --tries=5 -O phive.phar https://phar.io/releases/phive.phar \
@@ -95,7 +96,9 @@ linters:
     install:
       dockerfile:
         - |
-          RUN phive --no-progress install phpstan -g --trust-gpg-keys CF1A108D0E7AE720
+          RUN composer global require phpstan/phpstan \
+              && composer global config bin-dir --absolute
+        - ENV PATH="/root/.composer/vendor/bin:$PATH"
     ide:
       idea:
         - name: PHPStan / Psalm / Generics
