--- a/megalinter/descriptors/raku.yml
+++ b/megalinter/descriptors/raku.yml
@@ -23,7 +23,14 @@ linters:
       - "raku -I ./lib -c myfile.raku"
     install:
       dockerfile:
-        - RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories && apk add --update --no-cache rakudo zef
+        - |
+          RUN curl -L https://github.com/nxadm/rakudo-pkg/releases/download/v2020.10-02/rakudo-pkg-Alpine3.12_2020.10-02_x86_64.apk > rakudo-pkg-Alpine3.12_2020.10-02_x86_64.apk \
+              && apk add --no-cache --allow-untrusted rakudo-pkg-Alpine3.12_2020.10-02_x86_64.apk \
+              && rm rakudo-pkg-Alpine3.12_2020.10-02_x86_64.apk \
+              && /opt/rakudo-pkg/bin/add-rakudo-to-path \
+              && source /root/.profile \
+              && /opt/rakudo-pkg/bin/install-zef-as-user
+        - ENV PATH="~/.raku/bin:/opt/rakudo-pkg/bin:/opt/rakudo-pkg/share/perl6/site/bin:$PATH"
     ide:
       atom:
         - name: language-perl6
