Script to list references to Mega-Linter in other documentations (#181)
* Script to list references to Mega-Linter in other documentations

* [Mega-Linter] Apply linters fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/megalinter/descriptors/bash.yml
+++ b/megalinter/descriptors/bash.yml
@@ -13,6 +13,7 @@ linters:
   - class: BashBashExecLinter
     linter_name: bash-exec
     linter_url: https://tiswww.case.edu/php/chet/bash/bashtop.html
+    linter_megalinter_ref_url: never
     name: BASH_EXEC
     cli_executable_version: bash
     cli_help_arg_name: "--help"
@@ -33,6 +34,7 @@ linters:
     linter_url: https://github.com/koalaman/shellcheck
     linter_rules_url: https://github.com/koalaman/shellcheck#gallery-of-bad-code
     linter_rules_inline_disable_url: https://github.com/koalaman/shellcheck/wiki/Ignore
+    linter_megalinter_ref_url: https://github.com/koalaman/shellcheck/pull/2076
     cli_lint_extra_args:
       - "--color=auto"
       - "--external-sources"
@@ -70,6 +72,7 @@ linters:
   # SHFMT
   - linter_name: shfmt
     linter_url: https://github.com/mvdan/sh
+    linter_megalinter_ref_url: "no"
     name: BASH_SHFMT
     cli_lint_extra_args:
       - "-d"
