--- a/megalinter/descriptors/rst.yml
+++ b/megalinter/descriptors/rst.yml
@@ -8,6 +8,7 @@ linters:
   # restructuredtext-lint
   - linter_name: rst-lint
     linter_url: https://github.com/twolfson/restructuredtext-lint
+    linter_megalinter_ref_url: https://github.com/twolfson/restructuredtext-lint/wiki/Integration-in-other-tools#integration-in-other-tools
     examples:
       - "rst-lint myfile.rst"
     install:
@@ -19,6 +20,7 @@ linters:
     config_file_name: ".rstcheck.cfg"
     linter_rules_configuration_url: https://github.com/myint/rstcheck#configuration-file
     linter_rules_inline_disable_url: https://github.com/myint/rstcheck#ignore-specific-errors
+    linter_megalinter_ref_url: https://github.com/myint/rstcheck/pull/73
     examples:
       - "rstcheck myfile.rst"
       - "rstcheck -c .rstcheck.cfg myfile.rst"
@@ -32,6 +34,7 @@ linters:
   # rstfmt
   - linter_name: rstfmt
     linter_url: https://github.com/dzhu/rstfmt
+    linter_megalinter_ref_url: https://github.com/dzhu/rstfmt/pull/1
     cli_lint_fix_arg_name: "-i"
     linter_version_cache: "0.0.0" # --version not implemented on rstfmt
     test_folder: rst_rstfmt
