--- a/megalinter/descriptors/clojure.yml
+++ b/megalinter/descriptors/clojure.yml
@@ -12,6 +12,7 @@ linters:
     linter_rules_url: https://github.com/borkdude/clj-kondo#features
     linter_banner_image_url: https://github.com/borkdude/clj-kondo/raw/master/logo/logo-300dpi.png
     linter_rules_configuration_url: https://github.com/borkdude/clj-kondo/blob/master/doc/config.md#configuration
+    linter_megalinter_ref_url: https://github.com/borkdude/clj-kondo/blob/master/doc/ci-integration.md#github
     config_file_name: .clj-kondo/config.edn
     cli_config_arg_name: "--config"
     cli_lint_extra_args_after:
