--- a/megalinter/descriptors/copypaste.yml
+++ b/megalinter/descriptors/copypaste.yml
@@ -12,6 +12,7 @@ linters:
     linter_banner_image_url: https://raw.githubusercontent.com/kucherenko/jscpd/master/assets/logo.svg?sanitize=true
     linter_rules_configuration_url: https://github.com/kucherenko/jscpd/tree/master/packages/jscpd#config-file
     linter_rules_inline_disable_url: https://github.com/kucherenko/jscpd/tree/master/packages/jscpd#ignored-blocks
+    linter_megalinter_ref_url: https://github.com/kucherenko/jscpd#who-uses-jscpd
     config_file_name: .jscpd.json
     cli_lint_mode: project
     cli_lint_extra_args:
