--- a/megalinter/descriptors/html.yml
+++ b/megalinter/descriptors/html.yml
@@ -14,6 +14,7 @@ linters:
     linter_image_url: https://raw.githubusercontent.com/htmlhint/HTMLHint/master/website/static/img/htmlhint.png
     linter_rules_configuration_url: https://htmlhint.com/docs/user-guide/configuration
     linter_rules_inline_disable_url: https://htmlhint.com/docs/user-guide/configuration
+    linter_megalinter_ref_url: https://github.com/htmlhint/HTMLHint/pull/579/files
     config_file_name: .htmlhintrc
     cli_config_arg_name: "--config"
     examples:
