--- a/.github/workflows/deploy-PROD-flavors.yml
+++ b/.github/workflows/deploy-PROD-flavors.yml
@@ -50,6 +50,7 @@ jobs:
         flavor:
           [
             "dart",
+            "documentation",
             "dotnet",
             "go",
             "java",
