--- a/.github/workflows/deploy-RELEASE-flavors.yml
+++ b/.github/workflows/deploy-RELEASE-flavors.yml
@@ -40,6 +40,7 @@ jobs:
         flavor:
           [
             "dart",
+            "documentation",
             "dotnet",
             "go",
             "java",
