--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -258,6 +258,7 @@ nav:
       - "All flavors": "flavors.md"
 # flavors-start
       - "dart": "flavors/dart.md"
+      - "documentation": "flavors/documentation.md"
       - "dotnet": "flavors/dotnet.md"
       - "go": "flavors/go.md"
       - "java": "flavors/java.md"
