internal GH actions fix

--- a/.github/workflows/deploy-PROD.yml
+++ b/.github/workflows/deploy-PROD.yml
@@ -22,7 +22,7 @@ on:
       - "Dockerfile"
       - "flavors/**"
       - "megalinter/**"
-      - "megalinter_runner/**"
+      - "mega-linter-runner/**"
       - "**/linter-versions.json"
 
 ###############
