Fix mega-linter-runner package.json

--- a/mega-linter-runner/package.json
+++ b/mega-linter-runner/package.json
@@ -8,7 +8,8 @@
   "description": "Local runner for Mega-Linter",
   "main": "index.js",
   "files": [
-    "lib"
+    "lib",
+    "generators"
   ],
   "bin": {
     "mega-linter-runner": "lib/index.js",
