Add Salesforce Flavor (#192)
* Add Salesforce Flavor

* align center format/fix column

* CHANGELOG

* Disable generator test

--- a/.github/workflows/deploy-PROD-flavors.yml
+++ b/.github/workflows/deploy-PROD-flavors.yml
@@ -59,6 +59,7 @@ jobs:
             "python",
             "ruby",
             "rust",
+            "salesforce",
             "scala",
             "terraform",
           ]
