--- a/.github/workflows/deploy-RELEASE-flavors.yml
+++ b/.github/workflows/deploy-RELEASE-flavors.yml
@@ -49,6 +49,7 @@ jobs:
             "python",
             "ruby",
             "rust",
+            "salesforce",
             "scala",
             "terraform",
           ]
