--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -268,6 +268,7 @@ nav:
       - "python": "flavors/python.md"
       - "ruby": "flavors/ruby.md"
       - "rust": "flavors/rust.md"
+      - "salesforce": "flavors/salesforce.md"
       - "scala": "flavors/scala.md"
       - "terraform": "flavors/terraform.md"
 # flavors-end
