--- a/megalinter/descriptors/json.megalinter-descriptor.yml
+++ b/megalinter/descriptors/json.megalinter-descriptor.yml
@@ -18,6 +18,7 @@ linters:
   - linter_name: v8r
     linter_url: https://github.com/chris48s/v8r
     linter_text: v8r checks the validity of JSON/YAML files if they have a matching schema defined on [schemastore.org](https://www.schemastore.org/json/)
+    linter_rules_url: https://www.schemastore.org/json/
     cli_lint_extra_args:
       - "--ignore-errors"
     cli_help_arg_name: "--help"
