New flavor ci_light (#196)
* New flavor CI_light

* [Mega-Linter] Apply linters fixes

* Add missing icon

* Add codecov config

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.github/workflows/deploy-PROD-flavors.yml
+++ b/.github/workflows/deploy-PROD-flavors.yml
@@ -49,6 +49,7 @@ jobs:
         # flavors-start
         flavor:
           [
+            "ci_light",
             "dart",
             "documentation",
             "dotnet",
