--- a/megalinter/descriptors/git.megalinter-descriptor.yml
+++ b/megalinter/descriptors/git.megalinter-descriptor.yml
@@ -2,6 +2,7 @@ descriptor_id: GIT
 descriptor_type: other
 descriptor_flavors:
   - all_flavors # Applicable to CI in any language project
+  - ci_light
 install:
   dockerfile:
     - RUN git config --global core.autocrlf true
