--- a/.github/workflows/deploy-RELEASE-flavors.yml
+++ b/.github/workflows/deploy-RELEASE-flavors.yml
@@ -39,6 +39,7 @@ jobs:
         # flavors-start
         flavor:
           [
+            "ci_light",
             "dart",
             "documentation",
             "dotnet",
