--- a/megalinter/descriptors/env.megalinter-descriptor.yml
+++ b/megalinter/descriptors/env.megalinter-descriptor.yml
@@ -2,6 +2,7 @@ descriptor_id: ENV
 descriptor_type: format
 descriptor_flavors:
   - all_flavors # Applicable to CI in any language project
+  - ci_light
 file_extensions:
   - ".env"
 linters:
