--- a/megalinter/descriptors/json.megalinter-descriptor.yml
+++ b/megalinter/descriptors/json.megalinter-descriptor.yml
@@ -2,6 +2,7 @@ descriptor_id: JSON
 descriptor_type: format
 descriptor_flavors:
   - all_flavors # Any project can contain JSON
+  - ci_light
 file_extensions:
   - ".json"
 linters:
