--- a/megalinter/descriptors/xml.megalinter-descriptor.yml
+++ b/megalinter/descriptors/xml.megalinter-descriptor.yml
@@ -2,6 +2,7 @@ descriptor_id: XML
 descriptor_type: format
 descriptor_flavors:
   - all_flavors # Any project can contain XML
+  - ci_light
 file_extensions:
   - ".xml"
 linters:
