--- a/megalinter/descriptors/yaml.megalinter-descriptor.yml
+++ b/megalinter/descriptors/yaml.megalinter-descriptor.yml
@@ -2,6 +2,7 @@ descriptor_id: YAML
 descriptor_type: format
 descriptor_flavors:
   - all_flavors # Any project can contain YAML
+  - ci_light
 file_extensions:
   - ".yml"
   - ".yaml"
