--- a/.github/workflows/auto-update-linters.yml
+++ b/.github/workflows/auto-update-linters.yml
@@ -81,6 +81,7 @@ jobs:
 
       # Create pull request if there are updates
       - name: Create Pull Request
+        id: cpr
         if: steps.compute_versions.outputs.has_updated_versions == 1
         uses: peter-evans/create-pull-request@v3
         with:
@@ -89,6 +90,7 @@ jobs:
           commit-message: "[automation] Auto-update linters version, help and documentation"
           delete-branch: true
           title: "[automation] Auto-update linters version, help and documentation"
+          body: "[automation] Auto-update linters version, help and documentation"
           labels: dependencies,automerge
       - name: Create PR output
         run: |
