Add Install button for IDE extensions when available (#198)
* builder for button links

* Build

* [Mega-Linter] Apply linters fixes

* Avoid to deploy if skip deploy is in commit message

skip deploy

* skip deploy test

skip deploy

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.github/workflows/deploy-RELEASE-flavors.yml
+++ b/.github/workflows/deploy-RELEASE-flavors.yml
@@ -55,7 +55,7 @@ jobs:
             "terraform",
           ]
 # flavors-end
-    if: github.repository == 'nvuillam/mega-linter'
+    if: github.repository == 'nvuillam/mega-linter' && !contains(github.event.head_commit.message, 'skip deploy')
     ##################
     # Load all steps #
     ##################
