--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -30,6 +30,7 @@ jobs:
   # Skip checks: https://github.com/fkirc/skip-duplicate-actions#option-3-cancellation-only
   skip_checks:
     name: Skip checks
+    if: "!contains(github.event.head_commit.message, 'skip deploy')"
     runs-on: ubuntu-latest
     steps:
       - uses: fkirc/skip-duplicate-actions@master
@@ -42,7 +43,7 @@ jobs:
     # Set the agent to run on
     runs-on: ubuntu-latest
     # Prevent duplicate run from happening when a forked push is committed
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
+    if: (github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository) && !contains(github.event.head_commit.message, 'skip deploy')
     # Set max build time for the job
     timeout-minutes: 60
     ##################
