--- a/.github/workflows/deploy-PROD.yml
+++ b/.github/workflows/deploy-PROD.yml
@@ -32,6 +32,7 @@ jobs:
   # Skip checks: https://github.com/fkirc/skip-duplicate-actions#option-3-cancellation-only
   skip_checks:
     name: Skip checks
+    if: "!contains(github.event.head_commit.message, 'skip deploy')"
     runs-on: ubuntu-latest
     steps:
       - uses: fkirc/skip-duplicate-actions@master
@@ -44,7 +45,7 @@ jobs:
     # Set the agent to run on
     runs-on: ubuntu-latest
     # Only run this on the main repo
-    if: github.repository == 'nvuillam/mega-linter'
+    if: github.repository == 'nvuillam/mega-linter' && !contains(github.event.head_commit.message, 'skip deploy')
     ##################
     # Load all steps #
     ##################
