Add IntelliJ install buttons in doc (#200)
* Add IntelliJ install buttons in doc

skip deploy

* [Mega-Linter] Apply linters fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/megalinter/descriptors/css.megalinter-descriptor.yml
+++ b/megalinter/descriptors/css.megalinter-descriptor.yml
@@ -70,7 +70,7 @@ linters:
           url: https://atom.io/packages/linter-scss-lint
       idea:
         - name: scss-lint-plugin
-          url: https://github.com/idok/scss-lint-plugin
+          url: https://plugins.jetbrains.com/plugin/7530-scss-lint
       vscode:
         - name: scss-lint
           url: https://marketplace.visualstudio.com/items?itemName=adamwalzer.scss-lint
