--- a/megalinter/descriptors/dart.megalinter-descriptor.yml
+++ b/megalinter/descriptors/dart.megalinter-descriptor.yml
@@ -39,7 +39,7 @@ linters:
     ide:
       idea:
         - name: dart-jetbrains-plugin
-          url: https://dart.dev/tools/jetbrains-plugin
+          url: https://plugins.jetbrains.com/plugin/6351-dart
       vscode:
         - name: dart-code
           url: https://marketplace.visualstudio.com/items?itemName=Dart-Code.dart-code
