--- a/megalinter/descriptors/lua.megalinter-descriptor.yml
+++ b/megalinter/descriptors/lua.megalinter-descriptor.yml
@@ -10,6 +10,7 @@ linters:
     linter_rules_url: https://luacheck.readthedocs.io/en/stable/warnings.html
     linter_rules_configuration_url: https://luacheck.readthedocs.io/en/stable/config.html
     linter_rules_inline_disable_url: https://luacheck.readthedocs.io/en/stable/inline.html
+    linter_megalinter_ref_url: https://github.com/luarocks/luacheck/pull/13
     config_file_name: .luacheckrc
     cli_config_arg_name: "--config"
     examples:
