--- a/megalinter/descriptors/php.megalinter-descriptor.yml
+++ b/megalinter/descriptors/php.megalinter-descriptor.yml
@@ -35,6 +35,7 @@ linters:
     linter_url: https://www.php.net
     linter_repo: https://github.com/php/php-src
     linter_banner_image_url: https://www.php.net/images/logos/new-php-logo.svg
+    linter_megalinter_ref_url: never
     name: PHP_BUILTIN
     cli_lint_extra_args:
       - "-l"
