[WIP] Mega-Linter plugins architecture (#213)
* Plugin architecture + test class + test example plugin

* [Mega-Linter] Apply linters fixes

* fixes

* quick fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -21,4 +21,5 @@ MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 SHOW_ELAPSED_TIME: true
 EMAIL_REPORTER_EMAIL: nicolas.vuillamy@gmail.com
 FILEIO_REPORTER: true
-
+PLUGINS:
+  - https://raw.githubusercontent.com/nvuillam/mega-linter/master/.automation/test/mega-linter-plugin-test/test.megalinter-descriptor.yml
