--- a/flavors/rust/Dockerfile
+++ b/flavors/rust/Dockerfile
@@ -168,7 +168,9 @@ COPY --from=protolint /usr/local/bin/protolint /usr/bin/
 RUN rustup component add clippy
 
 # misspell installation
-RUN go get -u github.com/client9/misspell/cmd/misspell
+RUN curl -L -o ./install-misspell.sh https://git.io/misspell \
+    && sh ./install-misspell.sh
+
 
 #OTHER__END
 
