--- a/flavors/salesforce/Dockerfile
+++ b/flavors/salesforce/Dockerfile
@@ -165,7 +165,9 @@ COPY --from=protolint /usr/local/bin/protolint /usr/bin/
 RUN sfdx plugins:install @salesforce/sfdx-scanner
 
 # misspell installation
-RUN go get -u github.com/client9/misspell/cmd/misspell
+RUN curl -L -o ./install-misspell.sh https://git.io/misspell \
+    && sh ./install-misspell.sh
+
 
 #OTHER__END
 
