--- a/flavors/scala/Dockerfile
+++ b/flavors/scala/Dockerfile
@@ -169,7 +169,9 @@ COPY --from=protolint /usr/local/bin/protolint /usr/bin/
 RUN ./coursier install scalafix --quiet --install-dir /usr/bin
 
 # misspell installation
-RUN go get -u github.com/client9/misspell/cmd/misspell
+RUN curl -L -o ./install-misspell.sh https://git.io/misspell \
+    && sh ./install-misspell.sh
+
 
 #OTHER__END
 
