--- a/megalinter/descriptors/copypaste.megalinter-descriptor.yml
+++ b/megalinter/descriptors/copypaste.megalinter-descriptor.yml
@@ -22,6 +22,7 @@ linters:
       - "./report/copy-paste/"
     cli_lint_extra_args_after:
       - "."
+    cli_lint_errors_regex : "Found (.*) clones"
     examples:
       - "jscpd --output ./report/copy-paste/ ."
       - "jscpd --output ./report/copy-paste/ -c .jscpd.json ."
