--- a/megalinter/descriptors/yaml.megalinter-descriptor.yml
+++ b/megalinter/descriptors/yaml.megalinter-descriptor.yml
@@ -33,6 +33,7 @@ linters:
     linter_url: https://github.com/chris48s/v8r
     linter_text: v8r checks the validity of JSON/YAML files if they have a matching schema defined on [schemastore.org](https://www.schemastore.org/json/)
     linter_rules_url: https://www.schemastore.org/json/
+    linter_megalinter_ref_url: "no"
     cli_lint_extra_args:
       - "--ignore-errors"
     cli_help_arg_name: "--help"
