--- a/megalinter/descriptors/json.megalinter-descriptor.yml
+++ b/megalinter/descriptors/json.megalinter-descriptor.yml
@@ -9,7 +9,7 @@ linters:
   # JSONLINT
   - linter_name: jsonlint
     linter_url: https://github.com/zaach/jsonlint
-    linter_megalinter_ref_url: "no"
+    linter_megalinter_ref_url: https://github.com/zaach/jsonlint/pull/127
     version_command_return_code: 1
     examples:
       - "jsonlint myfile.json"
@@ -21,6 +21,7 @@ linters:
     linter_url: https://github.com/chris48s/v8r
     linter_text: v8r checks the validity of JSON/YAML files if they have a matching schema defined on [schemastore.org](https://www.schemastore.org/json/)
     linter_rules_url: https://www.schemastore.org/json/
+    linter_megalinter_ref_url: "no"
     cli_lint_extra_args:
       - "--ignore-errors"
     cli_help_arg_name: "--help"
