Improve parsing of number of errors with regexes (#221)
* Count errors in linter logs with regex

* [Mega-Linter] Apply linters fixes

* Fix references

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/megalinter/descriptors/java.megalinter-descriptor.yml
+++ b/megalinter/descriptors/java.megalinter-descriptor.yml
@@ -25,6 +25,7 @@ linters:
     cli_lint_extra_args:
       - "-jar"
       - "/usr/bin/checkstyle"
+    cli_lint_errors_regex: "Checkstyle ends with ([0-9]+) errors"
     cli_version_extra_args:
       - "-jar"
       - "/usr/bin/checkstyle"
