--- a/.github/workflows/build-deploy-docs.yml
+++ b/.github/workflows/build-deploy-docs.yml
@@ -29,5 +29,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material mdx_truly_sane_lists
+      - run: pip install mkdocs-material mdx_truly_sane_lists json-schema-for-humans
+      - run: cd .automation && bash build_schemas_docs.sh && cd ..
       - run: mkdocs gh-deploy --force
