--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -14,8 +14,8 @@ DISABLE:
 DISABLE_LINTERS:
   - BASH_SHFMT
   - DOCKERFILE_HADOLINT
-FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|docs/overrides|flavors|clj-kondo|TEMPLATES)'
-YAML_V8R_FILTER_REGEX_EXCLUDE: '(descriptors)'
+FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|docs/overrides|docs/json-schemas|flavors|clj-kondo|TEMPLATES)'
+YAML_V8R_FILTER_REGEX_EXCLUDE: '(descriptors|templates/\.mega-linter.yml)'
 BASH_FILTER_REGEX_EXCLUDE: (lib)
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 SPELL_MISSPELL_FILTER_REGEX_EXCLUDE: '(\.automation/generated|docs/descriptors)'
